<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Temperature</string>
	<string name="message">Here is the actual current Temperature !</string>
	<string name="explain">Swipe to choose your layout</string>

    <string name="ad_unit_id" translatable="false">ca-app-pub-3294765052683520/2718363200</string>

    <string name="Ok">OK</string>
	<string name="quit_title">Quit ?</string>
	<string name="quit_message">Do you want to leave this application?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="goingon">The application goes on</string>

	<string name="changelog_title">New</string>
	<string name="about_title">About</string>

	<string name="share_with">Share with&#8230;</string>
	<string name="share_title">A friend recommend you&#8230;</string>
	<string name="share_link">http://market.android.com/details?id=com.kiof.temperature</string>
	
	<string name="other_link">market://search?q=pub:Kiof</string>
	
	<string name="menuTitle1">Options</string>
	<string name="menuTitleCondensed1">Options</string>
	<string name="menuTitle2">Send to a friend</string>
	<string name="menuTitleCondensed2">Share</string>
	<string name="menuTitle3">More free applications</string>
	<string name="menuTitleCondensed3">More apps</string>
	<string name="menuTitle4">About&#8230;</string>
	<string name="menuTitleCondensed4">About</string>
	<string name="menuTitle5">Quit</string>
	<string name="menuTitleCondensed5">Quit</string>

	<string name="preference_category_picture">Features</string>
	<string name="keepmypicture_title">Save</string>
	<string name="keepmypicture_summary">Save my picture</string>
	<string name="random_title">Ranom selection</string>
	<string name="random_summary">Automatically randomize picture on application start</string>
	<string name="save_setting">Save settings</string>
	<string name="setting_saved">Settings saved</string>
	
	<string name="background">Background</string>
    <string name="condIcon">Icon Condition</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    
</resources>
