<?xml version="1.0" encoding="utf-8"?>
<ViewSwitcher xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/viewSwitcher"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:animateFirstView="@android:anim/fade_in"
    android:animateLayoutChanges="true"
    android:inAnimation="@android:anim/fade_in"
    android:outAnimation="@android:anim/fade_out" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:animateLayoutChanges="true"
        android:inAnimation="@android:anim/fade_in"
        android:outAnimation="@android:anim/fade_out" >

        <ImageView
            android:id="@+id/background"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:contentDescription="@string/background"
            android:scaleType="centerCrop"
            android:src="@drawable/background" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:animateLayoutChanges="true"
            android:orientation="vertical" >

            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                ads:adSize="SMART_BANNER"
                ads:adUnitId="@string/ad_unit_id" />

            <LinearLayout
                android:id="@+id/wheather"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:animateLayoutChanges="true"
                android:longClickable="true"
                android:orientation="vertical"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/temp"
                    style="@style/tempStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/condIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/condIcon" />

                <TextView
                    android:id="@+id/condDescr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/cityText"
                    style="?android:attr/textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/pressLab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure" />

                <TextView
                    android:id="@+id/press"
                    style="@style/valData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/humLab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity" />

                <TextView
                    android:id="@+id/hum"
                    style="@style/valData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/windLab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind" />

                <TextView
                    android:id="@+id/windSpeed"
                    style="@style/valData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/windDeg"
                    style="@style/valData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inAnimation="@android:anim/fade_in"
        android:outAnimation="@android:anim/fade_out" >

        <TextView
            android:id="@+id/explain"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/explain" />

        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

</ViewSwitcher>